Tablero detalles v1 finalizado.

--- a/src/css/input.css
+++ b/src/css/input.css
@@ -12,6 +12,15 @@
            dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500;
   }
 
+  .scroll-container {
+    @apply overflow-auto overscroll-contain
+           [&::-webkit-scrollbar]:w-2
+           [&::-webkit-scrollbar-track]:bg-gray-100
+           [&::-webkit-scrollbar-thumb]:bg-gray-300
+           dark:[&::-webkit-scrollbar-track]:bg-neutral-700
+           dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500;
+  }
+
   .container-modal {
     @apply fixed inset-0 flex items-center justify-center;
   }
